<resources>
    <string name="app_name" translatable="false">OrbTrack</string>
    <string name="empty" translatable="false"/>
    <string name="spacetrack_create_link" translatable="false">https://www.space-track.org/auth/createAccount</string>
    <string name="title_norad" translatable="false">NORAD</string>
    <string name="title_placeholder" translatable="false">-</string>
    <plurals name="desc_used_by_constellation">
        <item quantity="one">%s is used by %s. It would have to be disabled first.</item>
        <item quantity="other">%s is used by %s. They would have to be disabled first.</item>
    </plurals>
    <plurals name="text_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="text_files">
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>
    <plurals name="text_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="text_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="text_weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <string name="title_accounts">Accounts</string>
    <plurals name="title_days_ago">
        <item quantity="one">Yesterday</item>
        <item quantity="other">%d Days Ago</item>
    </plurals>
    <plurals name="title_files_loading">
        <item quantity="one">Loading File</item>
        <item quantity="other">Loading Files</item>
    </plurals>
    <plurals name="title_fps">
        <item quantity="one">%d FPS</item>
        <item quantity="other">%d FPS</item>
    </plurals>
    <string name="title_locations">Locations</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_satellites">Satellites</string>
    <plurals name="title_satellites_added">
        <item quantity="one">Added %d Satellite</item>
        <item quantity="other">Added %d Satellites</item>
    </plurals>
    <plurals name="title_satellites_outdated">
        <item quantity="one">A Satellite Is Outdated</item>
        <item quantity="other">%d Satellites Are Outdated</item>
    </plurals>
    <plurals name="title_satellites_saved">
        <item quantity="one">Saved %d Satellite</item>
        <item quantity="other">Saved %d Satellites</item>
    </plurals>
    <plurals name="title_satellites_updated">
        <item quantity="one">Updated Satellite</item>
        <item quantity="other">Updated Satellites</item>
    </plurals>
    <plurals name="title_satellites_updating">
        <item quantity="one">Updating Satellite</item>
        <item quantity="other">Updating Satellites</item>
    </plurals>
    <plurals name="title_satellites_updating_list">
        <item quantity="one">Updating Satellite List</item>
        <item quantity="other">Updating Satellites List</item>
    </plurals>
    <plurals name="title_satellites_updating_tles">
        <item quantity="one">Updating Satellite TLE</item>
        <item quantity="other">Updating Satellite TLEs</item>
    </plurals>
    <plurals name="title_space_of_space">
        <item quantity="one">%1$d of %2$d</item>
        <item quantity="other">%1$d of %2$d</item>
    </plurals>
    <string name="title_updates">Updates</string>
    <string name="abbrev_altitude">Alt</string>
    <string name="abbrev_azimuth">Az</string>
    <string name="abbrev_coordinates">Coords</string>
    <string name="abbrev_days_lower">d</string>
    <string name="abbrev_east">E</string>
    <string name="abbrev_east_north_east">ENE</string>
    <string name="abbrev_east_south_east">ESE</string>
    <string name="abbrev_elevation">El</string>
    <string name="abbrev_feet_lower">ft</string>
    <string name="abbrev_hours_lower">h</string>
    <string name="abbrev_illumination">Illum</string>
    <string name="abbrev_international">Intl</string>
    <string name="abbrev_kilobyte">KB</string>
    <string name="abbrev_kilometers_lower">km</string>
    <string name="abbrev_latitude">Lat</string>
    <string name="abbrev_longitude">Lon</string>
    <string name="abbrev_megabyte">MB</string>
    <string name="abbrev_meters_lower">m</string>
    <string name="abbrev_miles_lower">mi</string>
    <string name="abbrev_minutes_short_lower">m</string>
    <string name="abbrev_minutes_lower">min</string>
    <string name="abbrev_north">N</string>
    <string name="abbrev_north_east">NE</string>
    <string name="abbrev_north_north_east">NNE</string>
    <string name="abbrev_north_north_west">NNW</string>
    <string name="abbrev_north_west">NW</string>
    <string name="abbrev_satellite">Sat</string>
    <string name="abbrev_seconds_lower">s</string>
    <string name="abbrev_south">S</string>
    <string name="abbrev_south_east">SE</string>
    <string name="abbrev_south_south_east">SSE</string>
    <string name="abbrev_south_south_west">SSW</string>
    <string name="abbrev_south_west">SW</string>
    <string name="abbrev_velocity">Vel</string>
    <string name="abbrev_west">W</string>
    <string name="abbrev_west_north_west">WNW</string>
    <string name="abbrev_west_south_west">WSW</string>
    <string name="desc_age_check_failed">Age check failed.  Needed to continue.</string>
    <string name="desc_allow_rotation">Allow movement without forcing upright</string>
    <string name="desc_altitude_source">Location altitude detection</string>
    <string name="desc_ar_warning">If you are not an adult, please stay near an adult for safety, especially at night.\n\nBe aware of your surroundings and be sure to look where you are walking.</string>
    <string name="desc_arrow_size">Size of arrow indicating orbital direction</string>
    <string name="desc_auto_height">Retrieve height from hardware</string>
    <string name="desc_auto_width">Retrieve width from hardware</string>
    <string name="desc_azimuth_user_offset">Compass true north user adjustment</string>
    <string name="desc_compass_align">For highest accuracy in a new location, it may help to align the compass with a visible orbital. The sun and moon are the best to use.</string>
    <string name="desc_compass_error">Calibrate compass by moving your device in a figure 8 pattern, or move away from interference.</string>
    <string name="desc_finished_setup">All done! If you wish to change anything later, look under settings in the main menu.</string>
    <string name="desc_footprint_type">Footprint display look</string>
    <string name="desc_force_rotate">Force camera rotation if view appears upside down</string>
    <string name="desc_google_account_denied">Sorry. Google is not allowing access. Please try to remove/add the account under settings or wait a little while.</string>
    <string name="desc_google_play_services_fail">Sorry. There is an unknown problem with Google Play services.</string>
    <string name="desc_hide_constellation_star_paths">Hide star paths when showing constellations</string>
    <string name="desc_hide_distant_path_times">Hide time labels on path outside nearby view</string>
    <string name="desc_hide_unknown_passes">Hide pass displays if none are found</string>
    <string name="desc_hold_selected">Keep selected orbital when manually moving away from it</string>
    <string name="desc_imperial">Imperial (mi/ft)</string>
    <string name="desc_information_source">Descriptions and details of satellites</string>
    <string name="desc_label_style">Label drawing style</string>
    <string name="desc_layer">Surface images to display</string>
    <string name="desc_lens_frame_rate">Rate to update virtual lens rendering</string>
    <string name="desc_lens_view_improvements">Lens view accuracy and movement has been greatly improved for supported devices! Default is now using automatic lens field of view, but you can still manually align if it proves inaccurate.\n\nAlso, now all devices have the option of a simulated virtual lens! Just click the photosphere icon to try it.</string>
    <string name="desc_location_disable">Location services are disabled. Do you wish to change settings?</string>
    <string name="desc_location_icon">Icon to use for map location displays</string>
    <string name="desc_map_frame_rate">Rate to update globe/map rendering</string>
    <string name="desc_metric">Metric (km/m)</string>
    <string name="desc_need_updating">The data is too old and inaccurate. Please update to use.</string>
    <string name="desc_no_connection">You might not have an internet connection.  Try anyhow?</string>
    <string name="desc_orbital_icon">Icon to show orbital position</string>
    <string name="desc_orbital_icons">Icons to use for orbital displays</string>
    <string name="desc_permission_camera">Camera is needed to visualize object locations.</string>
    <string name="desc_permission_camera_deny">Camera permission denied</string>
    <string name="desc_permission_location">At least rough location is needed to calculate viewing angles for your location. If not allowed, only manual/saved locations will be used.</string>
    <string name="desc_permission_location_deny">Location permission denied</string>
    <string name="desc_permission_post_notifications">Need permission to show notifications of background updates and desired user events.</string>
    <string name="desc_permission_post_notifications_deny">Notifications permission denied</string>
    <string name="desc_permission_read_external_storage">Need access to external storage to read files.</string>
    <string name="desc_permission_read_external_storage_deny">Read from external storage denied</string>
    <string name="desc_permission_set_exact_alarm">Need access to set exact alarms, otherwise they may appear much later.</string>
    <string name="title_all">All</string>
    <string name="title_auto_update_catalog">Auto Update Catalog</string>
    <string name="title_auto_update_tles">Auto Update TLEs</string>
    <string name="title_back">Back</string>
    <string name="title_background">Background</string>
    <string name="title_bottom">Bottom</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_delete">Delete</string>
    <string name="title_display">Display</string>
    <string name="title_edit">Edit</string>
    <string name="title_globe_view">Globe View</string>
    <string name="title_images">Images</string>
    <string name="title_lens_view">Lens View</string>
    <string name="title_list_view">List View</string>
    <string name="title_location">Location</string>
    <string name="title_map_view">Map View</string>
    <string name="title_middle">Middle</string>
    <string name="title_name">Name</string>
    <string name="title_none">None</string>
    <string name="title_ok">OK</string>
    <string name="title_orbital">Orbital</string>
    <string name="title_other">Other</string>
    <string name="title_pass_az_end">Pass Az End</string>
    <string name="title_pass_az_start">Pass Az Start</string>
    <string name="title_pass_duration">Pass Duration</string>
    <string name="title_pass_dynamic">Pass Dynamic</string>
    <string name="title_pass_elevation">Pass Elevation</string>
    <string name="title_pass_end">Pass End</string>
    <string name="title_pass_start">Pass Start</string>
    <string name="title_save">Save</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_source">Source</string>
    <string name="title_text">Text</string>
    <string name="title_top">Top</string>
    <string name="title_update">Update</string>
    <string name="title_visible">Visible</string>
    <string name="title_widgets">Widgets</string>
</resources>