<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/pageBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/pageBackground">
        <TextView
            style="@style/SettingsItem"
            android:id="@+id/Settings_Accounts_Text"
            android:text="@string/title_accounts"/>

        <View style="@style/Divider"/>

        <TextView
            style="@style/SettingsItem"
            android:id="@+id/Settings_Display_Text"
            android:text="@string/title_display"/>

        <View style="@style/Divider"/>

        <TextView
            style="@style/SettingsItem"
            android:id="@+id/Settings_List_View_Text"
            android:text="@string/title_list_view"/>

        <View style="@style/Divider"/>

        <TextView
            style="@style/SettingsItem"
            android:id="@+id/Settings_Lens_View_Text"
            android:text="@string/title_lens_view"/>

        <View style="@style/Divider"/>

        <TextView
            style="@style/SettingsItem"
            android:id="@+id/Settings_Map_View_Text"
            android:text="@string/title_map_view"/>

        <View style="@style/Divider"/>

        <TextView
            style="@style/SettingsItem"
            android:id="@+id/Settings_Widgets_Text"
            android:text="@string/title_widgets"/>
    </LinearLayout>
</ScrollView>