<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/title_settings">
        <PreferenceScreen android:title="@string/title_locations"
            android:key="locations"
            android:icon="@drawable/ic_my_location_black"
            app:title="@string/title_locations"
            android:fragment="com.nikolaiapps.orbtrack.Settings$Page"/>

        <PreferenceScreen android:title="@string/title_notifications"
            android:key="notifications"
            android:icon="@drawable/ic_notifications_white"
            android:fragment="com.nikolaiapps.orbtrack.Settings$Page"/>

        <PreferenceScreen android:title="@string/title_updates"
            android:key="updates"
            android:icon="@drawable/ic_sync_white"
            android:fragment="com.nikolaiapps.orbtrack.SettingsActivity$SettingsSubFragment">
            <PreferenceCategory android:title="@string/title_updates">
                <SwitchPreference
                    app:title="@string/title_auto_update_tles"
                    android:key="TLEAutoUpdate"
                    android:persistent="false"/>

                <com.nikolaiapps.orbtrack.TimeIntervalPreference
                    android:key="TLEAutoUpdateTime"
                    app:hourKey="TLEAutoUpdateHour"
                    app:minuteKey="TLEAutoUpdateMinute"
                    app:intervalKey="TLEAutoUpdateInterval"
                    app:isPreferenceVisible="false"/>

                <SwitchPreference
                    app:title="@string/title_auto_update_catalog"
                    android:key="CatalogAutoUpdate"
                    android:persistent="false"/>

                <com.nikolaiapps.orbtrack.TimeIntervalPreference
                    android:key="CatalogAutoUpdateTime"
                    app:hourKey="CatalogAutoUpdateHour"
                    app:minuteKey="CatalogAutoUpdateMinute"
                    app:intervalKey="CatalogAutoUpdateRate"
                    app:isPreferenceVisible="false"/>
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen android:title="@string/title_other"
            android:key="other"
            android:icon="@drawable/ic_settings_black"
            android:fragment="com.nikolaiapps.orbtrack.SettingsActivity$SettingsSubFragment">
            <PreferenceCategory android:title="@string/title_other">

            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>