<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_edit"
        android:title="@string/title_edit"
        android:icon="@drawable/ic_mode_edit_white"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/menu_save"
        android:title="@string/title_save"
        android:icon="@drawable/ic_save_white"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/menu_delete"
          android:title="@string/title_delete"
          android:icon="@drawable/ic_delete_white"
          android:orderInCategory="30"
          app:showAsAction="ifRoom"
          android:visible="false"/>

    <item android:id="@+id/menu_update"
          android:title="@string/title_update"
          android:icon="@drawable/ic_sync_white"
          android:orderInCategory="40"
          app:showAsAction="ifRoom"
          android:visible="false"/>
</menu>